--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "markbody",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "parse the body of a webpage as markdown",
   "main": "index.js",
   "scripts": {
-    "build": "browserify index.js -o dist/markbody.js",
+    "build": "browserify -t brfs index.js -o dist/markbody.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublishOnly": "npm run build"
   },
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/sdgluck/markbody#readme",
   "devDependencies": {
+    "brfs": "^1.4.3",
     "browserify": "^14.4.0"
   },
   "dependencies": {
