--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "markbody",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "parse the body of a webpage as markdown",
   "main": "index.js",
   "scripts": {
-    "build": "browserify -t brfs index.js -o dist/markbody.js",
+    "build": "browserify index.js | uglifyjs -b ascii_only=true -b beautify=false --compress --mangle > dist/markbody.min.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublishOnly": "npm run build"
   },
@@ -27,11 +27,11 @@
   },
   "homepage": "https://github.com/sdgluck/markbody#readme",
   "devDependencies": {
-    "brfs": "^1.4.3",
     "browserify": "^14.4.0"
   },
   "dependencies": {
     "highlight.js": "^9.12.0",
-    "marked": "^0.3.6"
+    "marked": "^0.3.6",
+    "uglify-es": "^3.1.1"
   }
 }
